--- a/package.json
+++ b/package.json
@@ -40,15 +40,14 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
+    "@nestjs/microservices": "^10.3.9",
     "@nestjs/platform-express": "^10.3.9",
     "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "graphql": "^16.8.1",
-    "ioredis": "^5.3.2",
-    "nestjs-redis": "^1.3.3",
-    "redis": "^4.6.13",
+    "ioredis": "^5.4.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0"
